DOM: Fix an incorrect result of getElementsByClassName() in quirks mode.

document.getElementsByClassName('\u212a') matched to class="k" and class="K",
and did not match to class="&#x212a;".  It should match only to class="&#x212a;".

Element::ClassNames() stores ASCII-lower class string, however
getElementsByClassName() applied FoldCase().

Also, this CL removes a unused data member of ClassCollection.

BUG=725773,627682

Review-Url: https://codereview.chromium.org/2899243003
Cr-Commit-Position: refs/heads/master@{#474217}

Former-commit-id: 7b451a789df9be84623fc114a4efe00f5e9dbb5e